tests/sum12.txt
-- Tutorial step 12 (full error reporting)
sum = number (plus number @2add / minus number @2subtract)* end
number = digit+ @number
plus = #operator '+' @
minus = #operator '-' @
digit = #digit '0..9'
end = #newline '\13'? '\10' @
==========
2
----------
number 2
==========
42
----------
number 42
==========
2+40
----------
number 2
number 40
add
==========
2+40%
----------
Error in tests/sum12.txt, line 23: expecting digit, newline, operator
2+40%
    ^
==========
2+10+12+18
----------
number 2
number 10
add
number 12
add
number 18
add
==========
2-10+53-3
----------
number 2
number 10
subtract
number 53
add
number 3
subtract
==========
2+
----------
Error in tests/sum12.txt, line 49: expecting digit
2+
  ^
